--- a/popup.html
+++ b/popup.html
@@ -7,13 +7,11 @@
           width: 30px;
           outline: none;
         }
+        <link rel="stylesheet" href="main.css">
       </style>
-      <link rel="stylesheet" href="main.css">
-      <script src="popup.js"></script>
     </head>
     <h1>Welcome to Green Cart</h1>
     <body>
-      <h2 id = "productName">willchange</h2>
-      <button id="button">CHANGE</button>
+      <button>Click Me</button>
     </body>
   </html>
