--- a/popup.html
+++ b/popup.html
@@ -1,17 +1,9 @@
 <!DOCTYPE html>
   <html>
     <head>
-      <style>
-        button {
-          height: 30px;
-          width: 30px;
-          outline: none;
-        }
-        <link rel="stylesheet" href="main.css">
-      </style>
     </head>
     <h1>Welcome to Green Cart</h1>
     <body>
-      <button>Click Me</button>
+      <p>I see you!</p>
     </body>
   </html>
