displays brandname from amazon page on extension html

--- a/popup.html
+++ b/popup.html
@@ -13,7 +13,6 @@
     </head>
     <h1>Welcome to Green Cart</h1>
     <body>
-      <h2 id = "productName">willchange</h2>
-      <button id="button">CHANGE</button>
+      <h2 id = "productName">No Product Found</h2>
     </body>
   </html>
