--- a/popup.html
+++ b/popup.html
@@ -13,6 +13,8 @@
     </head>
     <h1>Welcome to Green Cart</h1>
     <body>
-      <h2 id = "productName">No Product Found</h2>
+      <h2 id = "productBrand">No Product Brand Found</h2>
+      <h2 id = "productName">No Product Name Found</h2>
+
     </body>
   </html>
