--- a/popup.html
+++ b/popup.html
@@ -15,6 +15,6 @@
     <body>
       <h2 id = "productBrand">No Product Brand Found</h2>
       <h2 id = "productName">No Product Name Found</h2>
-
+      <img id = "productImage" src = "sad_cat.png"></img>
     </body>
   </html>
