if statements for ratingicon

--- a/popup.html
+++ b/popup.html
@@ -19,8 +19,8 @@
         <h2 class = "envirorating">Environmental Rating: </h2>
 
         <span class = "rating">
-          <img class = "ratingIcon" src = "images/ratingA.png"></img>
-          <h1 class="ratingGrade" id = "productRating">A</h1>
+          <img class = "ratingIcon" src = "images/ratingC.png"></img>
+          <h1 class="ratingGrade" id = "productRating">C</h1>
         </span>
 
 
